# carbon-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CarbonEngine.sln  CarbonEngine.vcxproj  CarbonEngine.vcxproj.filters  README.md  appveyor.yml  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh
carbon/: backend.hpp  carbon.hpp  macros.hpp  paths.hpp  platform.hpp  setup.hpp  types.hpp
carbon/common/: debug.cpp  debug.hpp  debug_messenger.cpp  debug_messenger.hpp  logger.cpp  logger.hpp  template_types.hpp  utils.cpp  utils.hpp
carbon/core/: instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  time.hpp
carbon/display/: input.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
carbon/display/window/: window.cpp  window.hpp  window_glfw.cpp  window_glfw.hpp
carbon/engine/: config.hpp  engine.cpp  engine.hpp
carbon/input/: input_types.hpp
carbon/pipeline/: render_pass.cpp  render_pass.hpp
carbon/resources/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp
test/: main.cpp
